--- a/src/index.html
+++ b/src/index.html
@@ -3,16 +3,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap w/ Vite</title>
+    <title>Portfolio</title>
     <script type="module" src="./js/main.js"></script>
 </head>
 <body>
-<div class="container py-4 px-3 mx-auto">
-    <h1>Hello, Bootstrap and Vite!</h1>
-    <button class="btn btn-primary">Primary button</button>
-</div>
-<script>
-    AOS.init();
-</script>
+
+
 </body>
 </html>
