--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,32 @@
     <title>Portfolio</title>
     <script type="module" src="./js/main.js"></script>
 </head>
-<body>
+<body class="container-fluid" >
+<!--START NAVBAR-->
+<header>
+    <div class="row">
+        <div class="col-12">
+            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                <div class="container-fluid">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <div class="navbar-nav ms-auto mb-2 mb-lg-0">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link" href="#">About me</a>
+                            <a class="nav-link" href="#">My Works</a>
+                            <a class="nav-link" href="#">Services</a>
+                            <a class="nav-link" href="#">Contact</a>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </div>
+</header>
+<!--END NAVBAR-->
 
 
 </body>
