--- a/src/index.html
+++ b/src/index.html
@@ -3,52 +3,18 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Portfolio</title>
+    <title>Portfolio 2 </title>
     <script type="module" src="./js/main.js"></script>
 </head>
-<body class=" p-0" >
-<!--START NAVBAR-->
-<header>
-    <div class="row">
-        <div class="col-12 col-lg-8 offset-2 m-nav">
-            <nav class="navbar navbar-expand-lg">
-                <div class="container position-relative">
-                    <img class="position-absolute top-50 start-0" src="images/logo.png" alt="logo">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <div class="navbar-nav ms-auto mb-2 mb-lg-0">
-                            <a class="nav-link active" aria-current="page" href="#">HOME</a>
-                            <a class="nav-link" href="#">ABOUT ME</a>
-                            <a class="nav-link" href="#">MY WORKS</a>
-                            <a class="nav-link" href="#">SERVICES</a>
-                            <a class="nav-link" href="#">CONTACT</a>
-                        </div>
-                    </div>
-                </div>
-            </nav>
-        </div>
-    </div>
-</header>
-<!--END NAVBAR-->
-<!--START HERO-->
-<section id="hero" class="background row d-flex flex-column">
-    <div class="col-12 col-lg-5 offset-2 d-flex justify-content-around p-hero w-25">
-        <p><i class="fa-brands fa-instagram" style="color: #ffffff;"></i></p>
-        <p><i class="fa-brands fa-google-plus-g" style="color: #ffffff;"></i></p>
-        <p><i class="fa-solid fa-basketball fa-flip-horizontal" style="color: #ffffff;"></i></p>
-        <p><i class="fa-brands fa-tumblr" style="color: #ffffff;"></i></p>
-        <p><i class="fa-brands fa-youtube" style="color: #ffffff;"></i></p>
-        <p><i class="fa-brands fa-linkedin-in" style="color: #ffffff;"></i></p>
-        <p><i class="fa-brands fa-pinterest-p" style="color: #ffffff;"></i></p>
-    </div>
-    <div class="col-12 col-lg-8 offset-2 ps-h1">
-        <h1>I am Natanael Apreutesei</h1>
-    </div>
-</section>
-<!--END HERO-->
+<body class="container-fluid" >
+    <header class="row">
+        <div class="col-12">
+            <div class="row bg-white">
+                <div class="col-lg-8 offset-lg-2">
 
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
