--- a/src/index.html
+++ b/src/index.html
@@ -3,18 +3,143 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Portfolio 2 </title>
+    <title>Portfolio</title>
     <script type="module" src="./js/main.js"></script>
 </head>
-<body class="container-fluid" >
+<body class="container-fluid bg-d" >
     <header class="row">
         <div class="col-12">
             <div class="row bg-white">
                 <div class="col-lg-8 offset-lg-2">
+                    <nav class="navbar navbar-expand-lg">
+                        <div class="container-fluid">
+                            <a class="navbar-brand" href="#">
+                                <img id="logo" src="images/logo.png" alt="logo">
+                            </a>
+                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
+                            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                                    <li class="nav-item">
+                                        <a class="nav-link active" aria-current="page" href="#">HOME</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#">ABOUT ME</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#">MY WORKS</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#">SERVICES</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#">CONTACT</a>
+                                    </li>
+                                </ul>
 
+                            </div>
+                        </div>
+                    </nav>
+                </div>
+            </div>
+            <div class="row bghero vh-100 align-content-center position-relative">
+                <div class="col-lg-8 offset-lg-2">
+                    <div class="row">
+                        <div class="col-lg-7 herocontent w-100">
+                            <div id="logossocial" class="d-flex justify-content-between w-25 ps-1">
+                                <a href="https://example.com"><i class="fa-brands fa-instagram" style="color: #ffffff;"></i></a>
+                                <a href="https://example.com"><i class="fa-brands fa-google-plus-g" style="color: #ffffff;"></i></a>
+                                <a href="https://example.com"><i class="fa-solid fa-basketball fa-flip-horizontal" style="color: #ffffff;"></i></a>
+                                <a href="https://example.com"><i class="fa-brands fa-tumblr" style="color: #ffffff;"></i></a>
+                                <a href="https://example.com"><i class="fa-brands fa-youtube" style="color: #ffffff;"></i></a>
+                                <a href="https://example.com"><i class="fa-brands fa-linkedin-in" style="color: #ffffff;"></i></a>
+                                <a href="https://example.com"><i class="fa-brands fa-pinterest-p" style="color: #ffffff;"></i></a>
+                            </div>
+                            <h1 class="text-white w-100">I am Natanael Apreutesei.</h1>
+                            <div id="test" class="d-inline-block text-white border border-4 border-white text-center w-auto">
+                                <p id="designer" class="m-0 p-2">Web-Designer</p>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="row">
+                        <button type="button" id="arrowdown" class="p-0 border-0">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="white"
+                                 class="bi bi-arrow-down" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd"
+                                      d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z"/>
+                            </svg>
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
     </header>
+    <section id="myservices" class="row">
+        <div class="d-flex justify-content-center"><h2 class="text-white">My Services</h2></div>
+        <div class="col-lg-8 offset-2">
+            <div class="row">
+                <div class="col-lg-12 d-flex justify-content-evenly w-100">
+                    <article>
+                        <div class="card text-bg-dark cardmyservices">
+                            <div class="card-body d-flex flex-column justify-content-center align-items-start">
+                                <img src="images/icon-brushes.png" alt="brushes">
+                                <header><h3 class="text-white">Web Design</h3></header>
+                                <p class="text-white-50">Duis molestie enim mattis gravida viverra. Fusce ut eros augue. Sed id mauris vel neque</p>
+                            </div>
+                        </div>
+                    </article>
+                    <article>
+                        <div class="card text-bg-dark cardmyservices">
+                            <div class="card-body d-flex flex-column justify-content-center align-items-start">
+                                <img src="images/icon-pencil.png" alt="pencil">
+                                <header><h3 class="text-white">Photography</h3></header>
+                                <p class="text-white-50">Duis molestie enim mattis gravida viverra. Fusce ut eros augue. Sed id mauris vel neque</p>
+                            </div>
+                        </div>
+                    </article>
+                    <article>
+                        <div class="card text-bg-dark cardmyservices">
+                            <div class="card-body d-flex flex-column justify-content-center align-items-start">
+                                <img src="images/icon-camera.png" alt="camera">
+                                <header><h3 class="text-white">Video Editing</h3></header>
+                                <p class="text-white-50">Duis molestie enim mattis gravida viverra. Fusce ut eros augue. Sed id mauris vel neque</p>
+                            </div>
+                        </div>
+                    </article>
+                </div>
+                <div class="col-12 d-flex justify-content-evenly w-100">
+                    <article>
+                        <div class="card text-bg-dark cardmyservices">
+                            <div class="card-body d-flex flex-column justify-content-center align-items-start">
+                                <img src="images/icon-lcd.png" alt="lcd">
+                                <header><h3 class="text-white">Copy Writing</h3></header>
+                                <p class="text-white-50">Duis molestie enim mattis gravida viverra. Fusce ut eros augue. Sed id mauris vel neque</p>
+                            </div>
+                        </div>
+                    </article>
+                    <article>
+                        <div class="card text-bg-dark cardmyservices">
+                            <div class="card-body d-flex flex-column justify-content-center align-items-start">
+                                <img src="images/icon-video.png" alt="video">
+                                <header><h3 class="text-white">Coding</h3></header>
+                                <p class="text-white-50">Duis molestie enim mattis gravida viverra. Fusce ut eros augue. Sed id mauris vel neque</p>
+                            </div>
+                        </div>
+                    </article>
+                    <article>
+                        <div class="card text-bg-dark cardmyservices">
+                            <div class="card-body d-flex flex-column justify-content-center align-items-start">
+                                <img src="images/icon-phone.png" alt="phone">
+                                <header><h3 class="text-white">App Development</h3></header>
+                                <p class="text-white-50">Duis molestie enim mattis gravida viverra. Fusce ut eros augue. Sed id mauris vel neque</p>
+                            </div>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
