--- a/src/index.html
+++ b/src/index.html
@@ -57,88 +57,181 @@
                                 <a href="https://example.com"><i class="fa-brands fa-pinterest-p" style="color: #ffffff;"></i></a>
                             </div>
                             <h1 class="text-white w-100">I am Natanael Apreutesei.</h1>
-                            <div id="test" class="d-inline-block text-white border border-4 border-white text-center w-auto">
+                            <div class="d-inline-block text-white border border-4 border-white text-center w-auto">
                                 <p id="designer" class="m-0 p-2">Web-Designer</p>
                             </div>
                         </div>
 
                     </div>
                     <div class="row">
-                        <button type="button" id="arrowdown" class="p-0 border-0">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="white"
-                                 class="bi bi-arrow-down" viewBox="0 0 16 16">
-                                <path fill-rule="evenodd"
-                                      d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z"/>
-                            </svg>
-                        </button>
+                        <button type="button" id="arrowdown" class="p-0 border-0"></button>
                     </div>
                 </div>
             </div>
         </div>
     </header>
-    <section id="myservices" class="row">
-        <div class="d-flex justify-content-center"><h2 class="text-white">My Services</h2></div>
-        <div class="col-lg-8 offset-2">
-            <div class="row">
-                <div class="col-lg-12 d-flex justify-content-evenly w-100">
-                    <article>
+    <section id="myservices" class="row col-lg-8 offset-lg-2">
+        <h2 class="text-white text-center">My Services</h2>
+            <div class="row justify-content-between w-100">
+                    <article class="col-lg-4 mt-2 mt-lg-1">
                         <div class="card text-bg-dark cardmyservices">
                             <div class="card-body d-flex flex-column justify-content-center align-items-start">
                                 <img src="images/icon-brushes.png" alt="brushes">
-                                <header><h3 class="text-white">Web Design</h3></header>
+                                <header><h3 class="text-white mt-4 mb-3">Web Design</h3></header>
                                 <p class="text-white-50">Duis molestie enim mattis gravida viverra. Fusce ut eros augue. Sed id mauris vel neque</p>
                             </div>
                         </div>
                     </article>
-                    <article>
-                        <div class="card text-bg-dark cardmyservices">
-                            <div class="card-body d-flex flex-column justify-content-center align-items-start">
-                                <img src="images/icon-pencil.png" alt="pencil">
-                                <header><h3 class="text-white">Photography</h3></header>
-                                <p class="text-white-50">Duis molestie enim mattis gravida viverra. Fusce ut eros augue. Sed id mauris vel neque</p>
-                            </div>
-                        </div>
-                    </article>
-                    <article>
+                    <article class="col-lg-4 mt-2 mt-lg-1">
                         <div class="card text-bg-dark cardmyservices">
                             <div class="card-body d-flex flex-column justify-content-center align-items-start">
                                 <img src="images/icon-camera.png" alt="camera">
-                                <header><h3 class="text-white">Video Editing</h3></header>
+                                <header><h3 class="text-white mt-4 mb-3">Photography</h3></header>
                                 <p class="text-white-50">Duis molestie enim mattis gravida viverra. Fusce ut eros augue. Sed id mauris vel neque</p>
                             </div>
                         </div>
                     </article>
-                </div>
-                <div class="col-12 d-flex justify-content-evenly w-100">
-                    <article>
-                        <div class="card text-bg-dark cardmyservices">
-                            <div class="card-body d-flex flex-column justify-content-center align-items-start">
-                                <img src="images/icon-lcd.png" alt="lcd">
-                                <header><h3 class="text-white">Copy Writing</h3></header>
-                                <p class="text-white-50">Duis molestie enim mattis gravida viverra. Fusce ut eros augue. Sed id mauris vel neque</p>
-                            </div>
-                        </div>
-                    </article>
-                    <article>
+                    <article class="col-lg-4 mt-2 mt-lg-1">
                         <div class="card text-bg-dark cardmyservices">
                             <div class="card-body d-flex flex-column justify-content-center align-items-start">
                                 <img src="images/icon-video.png" alt="video">
-                                <header><h3 class="text-white">Coding</h3></header>
+                                <header><h3 class="text-white mt-4 mb-3">Video Editing</h3></header>
                                 <p class="text-white-50">Duis molestie enim mattis gravida viverra. Fusce ut eros augue. Sed id mauris vel neque</p>
                             </div>
                         </div>
                     </article>
-                    <article>
+                    <article class="col-lg-4 mt-2 mt-lg-1">
                         <div class="card text-bg-dark cardmyservices">
                             <div class="card-body d-flex flex-column justify-content-center align-items-start">
-                                <img src="images/icon-phone.png" alt="phone">
-                                <header><h3 class="text-white">App Development</h3></header>
+                                <img src="images/icon-pencil.png" alt="pencil">
+                                <header><h3 class="text-white mt-4 mb-3">Copy Writing</h3></header>
                                 <p class="text-white-50">Duis molestie enim mattis gravida viverra. Fusce ut eros augue. Sed id mauris vel neque</p>
                             </div>
                         </div>
                     </article>
-                </div>
+                    <article class="col-lg-4 mt-2 mt-lg-1">
+                        <div class="card text-bg-dark cardmyservices">
+                            <div class="card-body d-flex flex-column justify-content-center align-items-start">
+                                <img src="images/icon-lcd.png" alt="lcd">
+                                <header><h3 class="text-white mt-4 mb-3">Coding</h3></header>
+                                <p class="text-white-50">Duis molestie enim mattis gravida viverra. Fusce ut eros augue. Sed id mauris vel neque</p>
+                            </div>
+                        </div>
+                    </article>
+                    <article class="col-lg-4 mt-2 mt-lg-1">
+                        <div class="card text-bg-dark cardmyservices">
+                            <div class="card-body d-flex flex-column justify-content-center align-items-start">
+                                <img src="images/icon-phone.png " alt="phone">
+                                <header><h3 class="text-white mt-4 mb-3">App Development</h3></header>
+                                <p class="text-white-50">Duis molestie enim mattis gravida viverra. Fusce ut eros augue. Sed id mauris vel neque</p>
+                            </div>
+                        </div>
+                    </article>
             </div>
+    </section>
+    <section id="aboutme" class="row col-lg-8 offset-lg-2">
+        <h2 class="text-white text-center border-bottom">About Me</h2>
+            <div id="bgaboutme" class="col-lg-6">
+
+            </div> <!--image-->
+            <div class="col-lg-6">
+                <div class="d-inline-block text-white border border-4 border-white text-center w-auto mb-5">
+                    <h3 id="hithere" class="text-white m-0 p-2">Hi There!</h3>
+                </div>
+                <p class="text-white-50">In id nulla magna. Nullam posuere fermentum mattis. Nunc id dui at sapien faucibus
+                fermentum ut
+                vel
+                diam. Nullam tempus, nunc id efficitur sagittis, urna est ultricies eros, ac porta sem turpis
+                quis
+                leo. Nulla in feugiat elit.
+                </p>
+
+                <div id="aboutmespace">
+                <div>
+                    <div class="d-flex flex-row justify-content-between">
+                        <p style="color:#f26c4f;">Name</p>
+                        <p style="color:#fff;">Jonathan Doe</p>
+                        <p style="color:#f26c4f;">Email:</p>
+                        <p style="color:#fff;">hello@example.com</p>
+                    </div>
+                </div>
+                <div>
+                    <div class="d-flex flex-row justify-content-between">
+                        <p style="color:#f26c4f;">Phone:</p>
+                        <p style="color:#fff;">+1 908-736-1801</p>
+                        <p style="color:#f26c4f;">Twitter:</p>
+                        <p style="color:#fff;">freelencer3</p>
+                    </div>
+                </div>
+             </div>
+                <hr class="mt-3 mb-3">
+            <div class="d-flex">
+                <button type="button" class="btn mymixin-buttonfull text-white me-3" >CONTACT ME!<i class="fa-solid fa-arrow-right ms-2"></i></button>
+                <button type="button" class="btn btn btn-outline-secondary no-radius text-white"><i class="fa-solid fa-download me-2"></i>DOWNLOAD
+                    CV
+                </button>
+            </div>
+        </div>
+    </section>
+    <section id="hire_me" class="row col-lg-8 offset-lg-2 align-content-center position-relative">
+            <h2 class="text-black text-center ">Let’s Work Together On Your Next Project!</h2>
+            <button type="button" id="worktoghether"
+                    class="btn m-0 p-2 position-absolute mymixin-buttonfull text-white">HIRE ME NOW!
+            </button>
+    </section>
+    <section id="myskills" class="row col-lg-8 offset-lg-2">
+        <header class="d-flex justify-content-center"><h2 class="text-white">My Skills</h2></header>
+        <div class="col-lg-6">
+            <header><h3 class="text-white">Every Day is a New Challenge</h3></header>
+            <p class="text-white-50 mt-4">In id nulla magna. Nullam posuere fermentum mattis. Nunc id dui at sapien faucibus fermentum ut
+                vel
+                diam. Nullam tempus, nunc id efficitur sagittis, urna est ultricies eros, ac porta sem turpis
+                quis
+                leo. Nulla in feugiat elit.
+            </p>
+            <p class="text-white-50 mt-4">Phasellus accumsan scelerisque dolor, quis mattis justo bibendum non. Nulla sollicitudin turpis
+                in
+                enim elementum varius. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere
+                cubilia Curae</p>
+        </div>
+        <div id="skillbar" class="col-lg-6">
+            <div class="d-flex justify-content-between align-items-end">
+                <p class="text-white">Webdesign</p>
+                <p class="text-white d-inline-block p-2 border border-3 border-white text-center w-auto percent">100%</p>
+            </div>
+            <div id="longline1"></div>
+            <div class="d-flex justify-content-between align-items-end w-80percent">
+                <p class="text-white mt-3">Photography</p>
+                <p class="text-white d-inline-block p-2 border border-3 border-white text-center w-auto percent mt-3">80%</p>
+            </div>
+            <div id="longline2"></div>
+            <div class="d-flex justify-content-between align-items-end w-90percent">
+                <p class="text-white mt-3">Coding</p>
+                <p class="text-white d-inline-block p-2 border border-3 border-white text-center w-auto percent mt-3">90%</p>
+            </div>
+            <div id="longline3"></div>
+            <div class="d-flex justify-content-between align-items-end w-60percent">
+                <p class="text-white mt-3">Copywriting</p>
+                <p class="text-white d-inline-block p-2 border border-3 border-white text-center w-auto percent mt-3">60%</p>
+            </div>
+            <div id="longline4"></div>
+        </div>
+    </section>
+    <section id="portfolio" class="row col-lg-8 offset-lg-2">
+        <header class="d-flex justify-content-center"><h2 class="text-white">Portfolio</h2></header>
+        <div class="masonry-container">
+            <div class="masonry-item"> <img src="images/img-work-01.png" alt="image work "></div>
+            <div class="masonry-item"> <img src="images/img-work-02.png" alt="image work "></div>
+            <div class="masonry-item"> <img src="images/img-work-03.png" alt="image work "></div>
+            <div class="masonry-item"> <img src="images/img-work-04.png" alt="image work "></div>
+            <div class="masonry-item"> <img src="images/img-work-05.png" alt="image work "></div>
+            <div class="masonry-item"> <img src="images/img-work-06.png" alt="image work "></div>
+            <div class="masonry-item"> <img src="images/img-work-07.png" alt="image work "></div>
+            <div class="masonry-item"> <img src="images/img-work-08.png" alt="image work "></div>
+            <div class="masonry-item"> <img src="images/img-work-09.png" alt="image work "></div>
+            <div class="masonry-item"> <img src="images/img-work-10.png" alt="image work "></div>
+            <div class="masonry-item"> <img src="images/img-work-11.png" alt="image work "></div>
+
         </div>
     </section>
 </body>
