--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>Portfolio</title>
     <script type="module" src="./js/main.js"></script>
 </head>
-<body class="container-fluid bg-d" >
+<body class="container-fluid bg-d p-0" >
     <header class="row">
         <div class="col-12">
             <div class="row bg-white">
@@ -234,5 +234,166 @@
 
         </div>
     </section>
+    <section id="sectionodometer" class="row col-lg-8 offset-lg-2">
+        <div class="row">
+            <div class="col-lg-10 offset-1 d-flex justify-content-between">
+                <div class="d-flex flex-column text-center">
+                    <p class="redn">78</p>
+                    <p class="podometer text-white">Clients</p>
+                </div>
+                <div class="d-flex flex-column text-center">
+                    <p class="redn">124</p>
+                    <p class="podometer text-white">Projects</p>
+                </div>
+                <div class="d-flex flex-column text-center">
+                    <p class="redn">39</p>
+                    <p class="podometer text-white">Projects</p>
+                </div>
+                <div class="d-flex flex-column text-center">
+                    <p class="redn">12</p>
+                    <p class="podometer text-white">Years Experience</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="testimonials" class="row col-lg-8 offset-lg-2">
+        <header class="d-flex justify-content-center"><h2 class="text-white">Testimonials</h2></header>
+        <div id="carouselExampleIndicators" class="carousel slide">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            </div>
+            <div class="carousel-inner mt-4">
+                <div class="carousel-item active">
+                    <div class="d-flex flex-column align-items-center">
+                        <p class="p-2 border border-3 text-white quotes text-center"><i class="fa fa-quote-right"></i></p>
+                        <div class="row">
+                            <div class="col-lg-9 offset-1 text-center">
+                                <p class="text-white-50 m-4">In id nulla magna. Nullam posuere fermentum mattis. Nunc id dui at sapien faucibus
+                                fermentum ut vel diam. Nullam tempus, nunc id efficitur sagittis
+                                , urna est ultricies eros, ac porta sem turpis quis leo. Nulla in feugiat elit. </p>
+                            </div>
+                        </div>
+                        <img src="images/person.jpg" class="d-block mx-auto rounded-circle p-5" alt="person1">
+                        <p class="m-0 text-white">Jane Doe</p>
+                        <p class="text-white-50 pb-5">Bristo Creative</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="d-flex flex-column align-items-center">
+                        <p class="p-2 border border-3 text-white quotes text-center"><i class="fa fa-quote-right"></i></p>
+                        <div class="row">
+                            <div class="col-lg-9 offset-1 text-center">
+                                <p class="text-white-50 m-4">In id nulla magna. Nullam posuere fermentum mattis. Nunc id dui at sapien faucibus
+                                    fermentum ut vel diam. Nullam tempus, nunc id efficitur sagittis
+                                    , urna est ultricies eros, ac porta sem turpis quis leo. Nulla in feugiat elit. </p>
+                            </div>
+                        </div>
+                        <img src="images/person-02.jpg" class="d-block mx-auto rounded-circle p-5" alt="person2">
+                        <p class="m-0 text-white">John Doe</p>
+                        <p class="text-white-50 pb-5">Bristo Creative</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row mt-5 mb-5">
+            <div class="d-flex justify-content-between">
+                <img src="images/logo-01-w.png" alt="logo work 1">
+                <img src="images/logo-02-w.png" alt="logo work 1">
+                <img src="images/logo-03-w.png" alt="logo work 1">
+                <img src="images/logo-04-w.png" alt="logo work 1">
+                <img src="images/logo-05-w.png" alt="logo work 1">
+            </div>
+        </div>
+    </section>
+    <section id="getintouch">
+        <div class="row col-lg-8 offset-lg-2">
+            <header class="mb-5"><h2 class="text-white d-flex justify-content-center">Get In Touch</h2></header>
+            <div class="row">
+                <div class="d-flex justify-content-between mt-5">
+                        <div class="d-flex flex-column">
+                            <p><i class="fa-solid fa-location-dot fa-2xl" style="color: #f26c4f;"></i></p>
+                            <p class="text-white robotom">Address</p>
+                            <p class="text-white-50">999 Carter Street</p>
+                            <p class="text-white-50">Sailor Springs, IL 62434</p>
+                        </div>
+                        <div>
+                            <p><i class="fa-solid fa-phone-volume fa-2xl" style="color: #f26c4f;"></i></p>
+                            <p class="text-white robotom">Phone</p>
+                            <p class="text-white-50">+1 618-689-9409</p>
+                            <p class="text-white-50">+1 781-254-8437</p>
+                        </div>
+                        <div>
+                            <p><i class="fa-solid fa-envelope fa-2xl" style="color: #f26c4f;"></i></p>
+                            <p class="text-white robotom">Email</p>
+                            <p class="text-white-50">hello@example.com</p>
+                            <p class="text-white-50">support@example.com</p>
+                        </div>
+                        <div>
+                            <p><i class="fa-brands fa-facebook-messenger fa-2xl" style="color: #f26c4f;"></i></p>
+                            <p class="text-white robotom">Facebook Chat</p>
+                            <p class="text-white-50">me.freelencer3</p>
+                        </div>
+                    </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-2">
+                    <header class="d-flex justify-content-center mb-5"><h2 class="text-white">Let's Connect</h2></header>
+                    <div class="d-flex justify-content-between">
+                        <p><i class="fa-brands fa-facebook fa-2xl"></i></p>
+                        <p class="text-white">Facebook</p>
+                    </div>
+                    <div class="d-flex justify-content-between">
+                        <p><i class="fa-brands fa-twitter fa-2xl"></i></p>
+                        <p class="text-white">Twitter</p>
+                    </div>
+                    <div class="d-flex justify-content-between">
+                        <p><i class="fa-brands fa-instagram fa-2xl"></i></p>
+                        <p class="text-white">Instagram</p>
+                    </div>
+                    <div class="d-flex justify-content-between">
+                        <p><i class="fa-brands fa-pinterest fa-2xl"></i></p>
+                        <p class="text-white">Pinterest</p>
+                    </div>
+                    <div class="d-flex justify-content-between">
+                        <p><i class="fa-brands fa-skype fa-2xl"></i></p>
+                        <p class="text-white">Skype</p>
+                    </div>
+                </div>
+                <div class="col-lg-2"></div>
+                <div class="col-lg-8">
+                    <header class="mb-5"><h2 class="text-white">Send Me a Message</h2></header>
+                    <form class="d-flex flex-column">
+                        <div class="d-flex justify-content-between">
+                            <div class="d-flex flex-column">
+                                <label for="name" class="text-white mb-2">Name</label>
+                                <input type="text" id="name">
+                            </div>
+                            <div class="d-flex flex-column">
+                                <label for="inputEmail" class="form-label text-white mb-2">Email</label>
+                                <input type="email"  id="inputEmail" aria-describedby="emailHelp">
+                            </div>
+                        </div>
+                        <div class="d-flex flex-column">
+                            <label for="subject" class="text-white mb-2">Subject</label>
+                            <input type="text" id="subject">
+                        </div>
+                        <div class="d-flex flex-column">
+                            <label for="textarea" class="text-white mb-2">Message</label>
+                            <textarea class="mb-2" id="textarea" rows="3"></textarea>
+                        </div>
+                        <div class="d-flex justify-content-end">
+                            <button type="button" class="btn mymixin-buttonfull text-white mb-5" >SEND A MESSAGE<i class="fa-solid fa-arrow-right ms-2"></i></button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="row bg-white">
+        <div class="col-lg-8 offset-lg-2">
+            <p class="text-body-tertiary pt-3">&copy; ThemeStarz 2018, All Rights Reserved</p>
+        </div>
+    </footer>
 </body>
 </html>
