--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
 
                     </div>
                     <div class="row">
-                        <button type="button" id="arrowdown" class="p-0 border-0"></button>
+                        <button type="button" id="arrowdown" class="p-0 border-0" onclick="scrollDown()"></button>
                     </div>
                 </div>
             </div>
